# catrace

./: .gitignore  README.md  dataio.py  dataio_read_matlab_struct.py  deconvolution.py.bk  environment.yml  exp_collection.py  frame_time.py  manifold_embed.py  pattern_correlation.py  plot_trace.py  process_time_trace.py  pyproject.toml  requirements.txt  setup.cfg  trace_dataframe.py
catrace/: __init__.py  _version.py  align_per_odor.py  behavior.py  cancorr.py  capacity_utils.py  cca.py  cluster.py  cross_trial.py  dataio.py  dataset.py  deconvolve.py  dim_reduce.py  distance_measure.py  exp_collection.py  fit_curve.py  for_paper.py  geometry.py  mahal.py  manifold_embed.py  mft_manifold_analysis.py  mutual_information.py  nrn_coord.py  nrnpca.py  param.py  pattern_correlation.py  plot_trace.py  process_neuron.py  process_time_trace.py  reduced_rank_regression.py  response.py  roi_group.py  scale.py  similarity.py  snn_dataio.py  stats.py  tca.py  template_match.py  trace_dataframe.py  trial_similarity.py  (+2 more)
catrace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
colormap/: clut2b.npy
demos/: analysis_OB.py  noise_level.py
notebooks/: average_timecourse.ipynb  bce_analyze_each_sample.ipynb  bce_collection.ipynb  bce_collection_nodtpar.ipynb  dataset_param.py  fa_cca.ipynb  individual_exp.ipynb  test_cca.ipynb  tuning_curve.ipynb  tuning_curve_Dp.ipynb  tuning_curve_OB.ipynb  tuning_curve_OB_nodtpar.ipynb  tuning_curve_normalized.ipynb  tuning_curve_normalized_umap.ipynb  tuning_curve_normalized_umap_Dp.ipynb
scripts/: map_to_neuron_coords.py  save_colormap.py
(+13 files in other folders)
