[metadata]
name = catrace
author = Bo Hu
author_email = bo.hu@fmi.ch
description = Calcium imaging time traces analysis tool box
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aloejhb/catrace
project_urls =
    Bug Tracker = https://github.com/aloejhb/catrace/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
     = .
packages = catrace
python_requires = >=3.9
install_requires =
  numpy
  pandas

[options.packages.find]
where = .
